2025-09-14  Karl Berry  <karl@freefriends.org>

	* luaoutputdir.test (tests): mkdir top-level subdir.
	Report from Maxim Cournoyer, tex-live 12 Sep 2025 22:42:53.

2025-09-02  Luigi Scarso  <luigi.scarso@gmail.com>
	* Fix field names of mplib.stats (thanks to Josef Friedrich)
          Fixed a wrong date in luatex-nodes.tex.


2025-09-01 Luigi Scarso  <luigi.scarso@gmail.com>
	* WORK IN PROGRESS: Various fixes for C23 compatibility. LuaTeX 1.24.0 


2025-07-15 Luigi Scarso  <luigi.scarso@gmail.com>
	* Fixed a paragraph misplacement in luatex-languages.tex (thanks to Josef Friedrich)


2025-07-15 Luigi Scarso  <luigi.scarso@gmail.com>
	* Fixed typos in mathcodes.c (thanks to Josef Friedrich)

	
2025-07-05 Luigi Scarso  <luigi.scarso@gmail.com>
	* Fix for legacy handling of truetype fonts (thanks to marcpenninga)


2025-07-01 Luigi Scarso  <luigi.scarso@gmail.com>
	* max size of the destination names table for PDF output raised to 1048576  (Max Chernoff)


2025-06-24 Luigi Scarso  <luigi.scarso@gmail.com>
	* Restored \mathflattenmode (M.F. Krüger)
	* LuaTeX 1.23.3 


2025-05-30 Luigi Scarso  <luigi.scarso@gmail.com>
	* additional 'value' field for write nodes (getfield) for
	  unexpanded token tables (H.Hagen)
	* LuaTeX 1.23.2 


2025-04-17 Luigi Scarso  <luigi.scarso@gmail.com>
	* experimental extension to ToUnicode for Type1 fonts (HH)
	* Document the table variant of `character.tounicode` (Max Chernoff)


2025-03-20 Luigi Scarso  <luigi.scarso@gmail.com>
	*  some more never used modes made obsolete + staircase kerns adapted (H.Hagen)
	*  LuaTeX 1.23.1


2025-03-18 Luigi Scarso  <luigi.scarso@gmail.com>
	*  LuaTeX 1.23.0


025-03-17 Luigi Scarso  <luigi.scarso@gmail.com>
	*  final solution for italic (H.Hagen)


2025-03-16 Luigi Scarso  <luigi.scarso@gmail.com>
	* always use old school tex logic (also for opentype) wrt italics
	  with exception for large operators in opentyep fonts (no mixed font
          usage); all related control modes removed (H.Hagen)

