@@ -1,11 +1,22 @@
+2025-09-19  Luigi Scarso  <luigi.scarso@gmail.com>
+	* Included in writeimg.c the correct header  <kpathsea/absolute.h>
+	  for kpse_absolute_p 
+
+	
 2025-09-14  Karl Berry  <karl@freefriends.org>
 
 	* luaoutputdir.test (tests): mkdir top-level subdir.
 	Report from Maxim Cournoyer, tex-live 12 Sep 2025 22:42:53.
 
+
+2025-09-14  Luigi Scarso  <luigi.scarso@gmail.com>
+	* Fixed read_img, it  now checks --output-dir (thanks to reescf@gmail.com)
+	* Added the $(ENVLUATEXCPPFLAGS) and $(ENVLUAJITEXCPPFLAGS) variables to libluatex.am
+	  to add compiler switches from the environment.
+
 2025-09-02  Luigi Scarso  <luigi.scarso@gmail.com>
 	* Fix field names of mplib.stats (thanks to Josef Friedrich)
-          Fixed a wrong date in luatex-nodes.tex.
+        * Fixed a wrong date in luatex-nodes.tex.
 
 
 2025-09-01 Luigi Scarso  <luigi.scarso@gmail.com>
